--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -1,2 +1,49 @@
-<!--pages/category/index.wxml-->
-<text>pages/category/index.wxml</text>
+<seachInput></seachInput>
+<!-- tab栏 -->
+<view class="list">
+  <!-- 左边 -->
+  <scroll-view scroll-y class="left_nav"  >
+    <view class="nav_item {{index === currentIndex?'avatic':''}}"
+    wx:for="{{navList}}"
+    wx:key="cat_id"
+    bindtap="handleMenuChange"
+    data-index="{{index}}"
+    >
+    {{item.cat_name}}
+    </view>
+      
+  </scroll-view>
+  <!-- 右边 -->
+  <scroll-view scroll-y class="right_list"  scroll-top="{{scrollTop}}">
+    
+    <view class="goods_group"
+    wx:for="{{rightList}}"
+    wx:for-index="index1"
+    wx:for-item="item1"
+    wx:key="cat_id"
+    >
+    <!-- 头部 -->
+      <view class="list_title">
+        <text class="delimiter">/</text>
+        <text class="goods_name">{{item1.cat_name}}</text>
+        <text class="delimiter">/</text>
+      </view> 
+        <!-- 内容 -->
+      <view  class="list_goods">
+      <navigator
+      wx:for="{{item1.children}}"
+      wx:for-item="item2"
+      wx:for-index="index2"
+      wx:key="item2"
+      url="/pages/goods_list/index?cid=1"
+      >  
+        <image class="" src="{{item2.cat_icon}}" mode="widthFix"/>
+        <view>{{item2.cat_name}}</view>   
+      </navigator>
+    </view>
+    </view>
+
+
+
+  </scroll-view>
+</view>
